# projet_test_polars

./: README.md  Untitled-1.ipynb  main.py  nootebook_essai_commandes.ipynb  pyproject.toml
data/: aapl_quarterly_master.csv  aapl_quarterly_summary.csv
docs/: guide_polars_lazyframe.md  guide_python_professionnel.md
src/frontend/: application.py
src/frontend/components/: page_1.py  pages_2.py
src/frontend/pages/: page_1.py
