[project]
name = "polars-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "scikit-learn>=1.3.0",
    "streamlit>=1.53.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]